fix(desktop): raise touch keyboard via JDK reflection, fix drag-scroll lag
Two remaining defects on the Windows touch input shim, both measured on
real hardware:

- The touch keyboard never appeared. COM ITipInvocation is dead on this
  Windows 11 build (REGDB_E_CLASSNOTREG for UIHostNoLaunch), the TabTip.exe
  relaunch fallback is a silent no-op because TabTip is already running,
  and the IPTip_Main_Window visibility check is a proven false negative on
  Win11 (Windows 11 hosts the keyboard in TextInputHost.exe instead).
  DesktopWindowsTouchKeyboard now tries the JDK's own private
  WToolkit.showTouchKeyboard/hideTouchKeyboard natives first (reflectively
  bound once, fail-safe), with the COM/TabTip route kept only as a
  secondary fallback for pre-Win11 hosts. Needs a second --add-opens
  (java.desktop/sun.awt.windows) alongside the existing sun.awt one, wired
  into both :desktop:run and the packaged launcher's jvmArgs.

- Drag-scrolling lagged behind the finger. Compose Foundation's Windows
  wheel-scroll config animates every wheel delta through a tween unless
  isSmoothScrollingEnabled is false, and that flag is the only reachable
  lever since isPreciseWheelScroll is hardcoded false on Windows.
  DesktopTouchSmoothScrollSuppressor reflects onto
  WindowsWinUIConfig.setSmoothScrollingEnabled$foundation (matched by
  prefix, not hardcoded) to turn animation off for the duration of a touch
  drag/fling and restore it afterwards, so finger scrolling is 1:1 while
  mouse-wheel users keep their animation. Restoration is idempotent and
  routes through the existing cancelFling() path plus a new
  WINDOW_LOST_FOCUS/WINDOW_DEACTIVATED guard, so an interrupted gesture
  can't leave smooth scrolling stuck off.

Deleted the isTouchKeyboardVisible() Win11 false-negative guard entirely;
the JDK call is a plain show, not COM's toggle, so no guard is needed.

Added 10 new unit tests (35 total, up from 25) covering the keyboard
accessor's bind-failure no-op path and the sup